--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/karlin/muramator-simulator",
   "devDependencies": {
+    "coffee-script": "*",
     "connect": "^2.14.5",
     "gulp": "^3.6.2",
     "gulp-bower": "0.0.4",
