--- a/package.json
+++ b/package.json
@@ -21,17 +21,19 @@
   "homepage": "https://github.com/karlin/muramator-simulator",
   "devDependencies": {
     "coffee-script": "*",
-    "connect": "^2.14.5",
-    "gulp": "^3.6.2",
-    "gulp-bower": "0.0.4",
-    "gulp-coffee": "^1.4.2",
-    "gulp-concat": "^2.2.0",
-    "gulp-concat-sourcemap": "^1.2.2",
-    "gulp-connect": "^2.0.5",
-    "gulp-plumber": "^0.6.1",
-    "gulp-uglify": "^0.2.1",
-    "gulp-util": "^2.2.14",
+    "connect": "*",
+    "del": "*",
+    "gulp": "*",
+    "gulp-coffee": "*",
+    "gulp-concat": "*",
+    "gulp-concat-sourcemap": "*",
+    "gulp-connect": "*",
+    "gulp-plumber": "*",
+    "gulp-rimraf": "*",
+    "gulp-uglify": "*",
+    "gulp-util": "*",
+    "gulp-watch": "*",
     "livereload": "*",
-    "open": "0.0.5"
+    "open": "*"
   }
 }
