fixing a few old bugs, simpler gulp watch

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-coffee": "*",
     "gulp-concat": "*",
     "gulp-concat-sourcemap": "*",
+    "gulp-sourcemaps": "*",
     "gulp-connect": "*",
     "gulp-plumber": "*",
     "gulp-rimraf": "*",
