Working graph and oscillator network

--- a/package.json
+++ b/package.json
@@ -20,19 +20,17 @@
   },
   "homepage": "https://github.com/karlin/muramator-simulator",
   "devDependencies": {
-    "coffee-script": "*",
+    "coffeescript": "*",
     "connect": "*",
     "del": "*",
     "gulp": "*",
     "gulp-coffee": "*",
     "gulp-concat": "*",
-    "gulp-concat-sourcemap": "*",
     "gulp-sourcemaps": "*",
     "gulp-connect": "*",
     "gulp-plumber": "*",
     "gulp-rimraf": "*",
     "gulp-uglify": "*",
-    "gulp-util": "*",
     "gulp-watch": "*",
     "livereload": "*",
     "open": "*"
